--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ plugins {
     id 'application'
 }
 
+group 'Authenticator'
+version '1.0.0'
+
 // Define the main class for the application
 mainClassName = 'com.cyberark.authenticator.App'
 
